--- a/module_order/src/main/res/layout/activity_publish_comment.xml
+++ b/module_order/src/main/res/layout/activity_publish_comment.xml
@@ -9,7 +9,7 @@
 
     <com.example.commonres.view.CommonToolBar
             android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize"
+            android:layout_height="@dimen/public_45_0dp"
             joker:title="发表评论"
             joker:backVisible="true">
     </com.example.commonres.view.CommonToolBar>
@@ -291,8 +291,10 @@
 
     <Button
             android:id="@+id/tv_publish_comment"
-            android:layout_width="350dp"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="@dimen/public_20_0dp"
+            android:layout_marginRight="@dimen/public_20_0dp"
             android:layout_marginBottom="30dp"
             android:layout_gravity="center_horizontal"
             android:background="@drawable/public_button_common_selector"
