--- a/module_home/src/main/res/layout/activity_filter_hotel.xml
+++ b/module_home/src/main/res/layout/activity_filter_hotel.xml
@@ -9,7 +9,7 @@
 
     <com.example.commonres.view.CommonToolBar
             android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize"
+            android:layout_height="@dimen/public_45_0dp"
             joker:backVisible="true"
             joker:rightTextViewVisible="true"
             joker:rightText="确定"
