--- a/module_home/src/main/res/layout/activity_hotel_selected_info.xml
+++ b/module_home/src/main/res/layout/activity_hotel_selected_info.xml
@@ -9,7 +9,7 @@
 
     <com.example.commonres.view.CommonToolBar
             android:layout_width="match_parent"
-            android:layout_height="?android:actionBarSize"
+            android:layout_height="@dimen/public_45_0dp"
             joker:title="酒店详情"
             joker:backVisible="true">
     </com.example.commonres.view.CommonToolBar>
@@ -241,7 +241,9 @@
         <ScrollView
                 android:id="@+id/sv_detail"
                 android:layout_width="match_parent"
-                android:layout_height="200dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/public_10_0dp"
+                android:layout_above="@+id/bt_hotel_book"
                 android:scrollbars="none"
                 android:overScrollMode="never"
                 android:layout_below="@+id/hotelmessage_RelativeLayout1">
@@ -398,144 +400,144 @@
 
                 </LinearLayout>
 
+                <LinearLayout
+                        android:id="@+id/hotelmessage_linearlayout"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="@dimen/public_10_0dp"
+                        android:orientation="horizontal"
+                        >
+
+                    <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                        <ImageView
+                                android:id="@+id/refrigeration_iv1"
+                                android:layout_width="36dp"
+                                android:layout_height="27dp"
+                                android:layout_gravity="center"
+                                android:background="@mipmap/tv"
+                                android:orientation="vertical"/>
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="5dp"
+                                android:paddingTop="5dp"
+                                android:text="电视"
+                                android:textColor="#999999"
+                                android:textSize="13dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                        <ImageView
+                                android:id="@+id/refrigeration_iv2"
+                                android:layout_width="32dp"
+                                android:layout_height="16dp"
+                                android:layout_gravity="center"
+                                android:background="@mipmap/hotelmessage_wifi"
+                                android:orientation="vertical"/>
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="5dp"
+                                android:paddingTop="15dp"
+                                android:text="wifi"
+                                android:textColor="#999999"
+                                android:textSize="13dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                        <ImageView
+                                android:id="@+id/refrigeration_iv3"
+                                android:layout_width="25dp"
+                                android:layout_height="25dp"
+                                android:layout_gravity="center"
+                                android:background="@mipmap/ice_box"
+                                android:orientation="vertical"/>
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="5dp"
+                                android:paddingTop="6dp"
+                                android:text="冰箱"
+                                android:textColor="#999999"
+                                android:textSize="13dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                        <ImageView
+                                android:id="@+id/refrigeration_iv4"
+                                android:layout_width="27dp"
+                                android:layout_height="18dp"
+                                android:layout_gravity="center"
+                                android:background="@mipmap/ac"
+                                android:orientation="vertical"/>
+
+                        <TextView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_gravity="center"
+                                android:layout_marginTop="5dp"
+                                android:paddingTop="15dp"
+                                android:text="空调"
+                                android:textColor="#999999"
+                                android:textSize="13dp"/>
+
+                    </LinearLayout>
+
+                    <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_gravity="center"
+                            android:layout_weight="1"
+                            android:orientation="vertical">
+
+                        <ImageView
+                                android:id="@+id/refrigeration_iv5"
+                                android:layout_width="24dp"
+                                android:layout_height="6dp"
+                                android:layout_gravity="center"
+                                android:background="@mipmap/hotelmessage_more"
+                                android:orientation="vertical"/>
+
+
+                    </LinearLayout>
+                </LinearLayout>
+
+
             </LinearLayout>
         </ScrollView>
-
-
-        <LinearLayout
-                android:id="@+id/hotelmessage_linearlayout"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/sv_detail"
-                android:orientation="horizontal"
-                >
-
-            <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                <ImageView
-                        android:id="@+id/refrigeration_iv1"
-                        android:layout_width="36dp"
-                        android:layout_height="27dp"
-                        android:layout_gravity="center"
-                        android:background="@mipmap/tv"
-                        android:orientation="vertical"/>
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:paddingTop="5dp"
-                        android:text="电视"
-                        android:textColor="#999999"
-                        android:textSize="13dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                <ImageView
-                        android:id="@+id/refrigeration_iv2"
-                        android:layout_width="32dp"
-                        android:layout_height="16dp"
-                        android:layout_gravity="center"
-                        android:background="@mipmap/hotelmessage_wifi"
-                        android:orientation="vertical"/>
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:paddingTop="15dp"
-                        android:text="wifi"
-                        android:textColor="#999999"
-                        android:textSize="13dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                <ImageView
-                        android:id="@+id/refrigeration_iv3"
-                        android:layout_width="25dp"
-                        android:layout_height="25dp"
-                        android:layout_gravity="center"
-                        android:background="@mipmap/ice_box"
-                        android:orientation="vertical"/>
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:paddingTop="6dp"
-                        android:text="冰箱"
-                        android:textColor="#999999"
-                        android:textSize="13dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                <ImageView
-                        android:id="@+id/refrigeration_iv4"
-                        android:layout_width="27dp"
-                        android:layout_height="18dp"
-                        android:layout_gravity="center"
-                        android:background="@mipmap/ac"
-                        android:orientation="vertical"/>
-
-                <TextView
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_gravity="center"
-                        android:layout_marginTop="5dp"
-                        android:paddingTop="15dp"
-                        android:text="空调"
-                        android:textColor="#999999"
-                        android:textSize="13dp"/>
-
-            </LinearLayout>
-
-            <LinearLayout
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_gravity="center"
-                    android:layout_weight="1"
-                    android:orientation="vertical">
-
-                <ImageView
-                        android:id="@+id/refrigeration_iv5"
-                        android:layout_width="24dp"
-                        android:layout_height="6dp"
-                        android:layout_gravity="center"
-                        android:background="@mipmap/hotelmessage_more"
-                        android:orientation="vertical"/>
-
-
-            </LinearLayout>
-        </LinearLayout>
 
 
         <Button
