--- a/module_order/src/main/res/layout/order_housing_item.xml
+++ b/module_order/src/main/res/layout/order_housing_item.xml
@@ -199,7 +199,7 @@
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="房费："
+                    android:text="金额："
                     android:textColor="#403d3d"
                     android:textSize="16sp"/>
 
