--- a/module_personal/src/main/res/layout/activity_credit_score.xml
+++ b/module_personal/src/main/res/layout/activity_credit_score.xml
@@ -1,8 +1,120 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-              xmlns:tools="http://schemas.android.com/tools"
-              android:layout_width="match_parent"
-              android:layout_height="match_parent"
-              android:orientation="vertical">
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:id="@+id/parent_linear_lay"
+    xmlns:joker="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical"
+    tools:ignore="ResourceName">
+
+    <com.example.commonres.view.CommonToolBar
+        android:layout_width="match_parent"
+        android:layout_height="@dimen/public_45_0dp"
+        joker:title="信用积分"
+        joker:backVisible="true"
+        joker:rightTextViewVisible="true"
+        joker:rightText="使用记录">
+    </com.example.commonres.view.CommonToolBar>
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:orientation="vertical">
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="150dp"
+                android:background="@color/public_colorAccent"></LinearLayout>
+
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="280dp"
+                android:layout_marginLeft="30dp"
+                android:layout_marginRight="30dp"
+                android:layout_marginTop="80dp"
+                android:background="@mipmap/circle"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:layout_marginTop="40dp"
+                    android:text="当前可用积分"
+                    android:textColor="#7c63e7"
+                    android:textSize="12sp"/>
+
+
+                <TextView
+                    android:id="@+id/credit_score_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="800"
+                    android:textColor="#7c63e7"
+                    android:textSize="70sp"/>
+
+
+                <TextView
+                    android:id="@+id/ke_di_tv"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_gravity="center"
+                    android:text="可抵：￥8.00"
+                    android:textColor="#7c63e7"
+                    android:textSize="12sp"/>
+
+
+                <Button
+                    android:id="@+id/user_btn"
+                    android:layout_width="120dp"
+                    android:layout_height="35dp"
+                    android:layout_gravity="center"
+                    android:background="@drawable/search_button_bg_selector"
+                    android:layout_marginTop="30dp"
+                    android:text="去使用积分"
+                    android:textColor="#fdfefe"
+
+                    />
+
+
+            </LinearLayout>
+
+        </FrameLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="60dp"
+                android:text="关于积分"
+                android:textColor="#908e8f"
+                android:textSize="12sp"/>
+
+
+            <ImageView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center"
+                android:layout_marginTop="5dp"
+                android:src="@mipmap/down"/>
+
+        </LinearLayout>
+
+
+    </LinearLayout>
 
 </LinearLayout>
